...
    },
    "confirm": "Confirm",
    "@confirm": {
        "type": "text",
        "placeholders": {}
    },
    "connect": "Connect",
    "@connect": {
        "type": "text",
        "placeholders": {}
    },
    "contactHasBeenInvitedToTheGroup": "Contact has been invited to the room",
    "@contactHasBeenInvitedToTheGroup": {
...
    },
    "loadMore": "Load more…",
    "@loadMore": {
        "type": "text",
        "placeholders": {}
    },
    "login": "Login",
    "@login": {
        "type": "text",
        "placeholders": {}
    },
    "logInTo": "Log in to {homeserver}",
    "@logInTo": {
...
    },
    "needPantalaimonWarning": "Please be aware that you need Pantalaimon to use end-to-end encryption for now.",
    "@needPantalaimonWarning": {
        "type": "text",
        "placeholders": {}
    },
    "newChat": "New chat",
    "@newChat": {
        "type": "text",
        "placeholders": {}
    },
    "newMessageInFluffyChat": "💬 New message in Schulchat",
    "@newMessageInFluffyChat": {
...
    "widgetNameError": "Please provide a display name.",
    "@widgetNameError": {},
    "errorAddingWidget": "Error adding the widget.",
    "@errorAddingWidget": {},
    "youRejectedTheInvitation": "You rejected the invitation",
    "@youRejectedTheInvitation": {},
    "youJoinedTheChat": "You joined the chat",
    "@youJoinedTheChat": {},
    "youAcceptedTheInvitation": "👍 You accepted the invitation",
    "@youAcceptedTheInvitation": {},
    "youBannedUser": "You banned {user}",
    "@youBannedUser": {
        "placeholders": {
...
